@@ -1,3 +1,7 @@
+2005-06-26 DJ Lucas <dj@linuxfromscratch.org>
+	* Added uninstall targets to Makefile.  Patch provided by 
+	  Matthias Berndt.
+
 2005-06-13 Igor Zivkovic <igor@linuxfromscratch.org>
 	* Corrected the MySQL script to make it compatible with the new LFS
 	boot scripts (Jay D. McHugh).
